# gamarals-api-for-web

./: .gitignore  .gitmodules
backend/: CMakeLists.txt
backend/resources/: Makefile  main.c
backend/resources/skel/: Makefile
backend/src/: CMakeLists.txt  Makefile  common.h  compile.c  compile.h  config.h  config.h.in  main.c  mcu.c  mcu.h  project.c  project.h
